Create .gitingore file

--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,19 @@
     <title>Timestamp Microservice</title>
 </head>
 <body>
-    <h1>Timestamp Microservice</h1>
-    <hr>
-    <h3>Example Usage:</h3>
-    <a href="/api/timestamp/2015-12-25">/api/timestamp/2015-12-25</a>
-    <br>
-    <a href="/api/timestamp/1451001600000">/api/timestamp/1451001600000</a>
+    <div class="header">
+        <h1>Timestamp Microservice</h1>
+        <hr>
+    </div>
+    <div class="main">
+        <h3>Example Usage:</h3>
+        <a href="/api/timestamp/2015-12-25"><p>/api/timestamp/2015-12-25</p></a>
+        <a href="/api/timestamp/1451001600000"><p>/api/timestamp/1451001600000</p></a>
+        <h3>Example Output:</h3>
+        <p>{"unix":1451001600000,"utc":"Thu Dec 24 2015 19:00:00 GMT-0500 (Eastern Standard Time)"}</p>
+    </div>
+    <div class="footer">
+        <p></p>
+    </div>
 </body>
 </html>
