--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,16 @@
 body {
-    background-color: dimgray;
+    background-color: rgb(160, 159, 159);
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: #222;
+}
+
+.main {
+    padding: 0;
+    margin-top: 50px;
+}
+
+a {
+    color: rgb(0, 129, 204);
 }
